initial/mysql-deployment.yaml
#MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: demo-app-mysql
  namespace: batch
  labels:
    app: demo-app
spec:
  ports:
    - port: 3306
  selector:
    app: demo-app
    tier: mysql
  clusterIP: None
---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mysql-pvc
#  labels:
#    app: demo-app
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 2Gi
#  storageClassName: gp2  # or "gp3", "standard", etc.
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-mysql
  namespace: batch
  labels:
    app: demo-app
spec:
  selector:
    matchLabels:
      app: demo-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo-app
        tier: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          livenessProbe:
            tcpSocket:
              port: 3306
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - mysqladmin ping -h 127.0.0.1 -u root -p$MYSQL_ROOT_PASSWORD
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: init-script
          configMap:
            name: init-sql-script
            items:
              - key: schema.sql
                path: init.sql
