initial/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-cosign-signatures
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: verify-signed-images
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
        - image: "557690581666.dkr.ecr.eu-west-1.amazonaws.com/*"
          key: |
            -----BEGIN PUBLIC KEY-----
            MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE/kbm1DvCTLIxyp9qE5PrIci3y8kR
[...]
            -----END PUBLIC KEY-----
          repository: "557690581666.dkr.ecr.eu-west-1.amazonaws.com"
